Fix for bootstrap Nav not collapsing back, with JS Also fix some styles for Navbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@ body {
   width: 100%;
   z-index: 1;
   background: transparent;
+  align-items: baseline !important;
 
   .logo {
     width: 56px;
@@ -100,51 +101,7 @@ body {
     color: #333 !important;
   }
 }
-#Section3 {
-  /*.jumbotron {
-    background:
-        linear-gradient(rgba(164, 164, 164, 0.4), rgba(93, 93, 93, 0.4)),
-        url(../assets/ac-place.jpeg) 0/100% 200% no-repeat; //bottom center no-repeat;
 
-    p {
-      text-shadow: 2px 2px 2px #ddd;
-    }
-  }*/
-  /*.card { 
-
-    h5 {
-      font-size: 2rem;
-    }
-    .card-left {
-      background:
-        linear-gradient(rgba(21, 21, 21, 0.4), #3336),
-        url(../assets/hvac-team-02.jpg) 0/100% 200% no-repeat; //bottom center no-repeat;
-      
-        h5 {
-          text-shadow: 2px 2px 2px #333;
-        }
-        .h-line {
-          border-bottom: 1px #fea solid;
-        }
-
-        .c-l-p {
-          font-size: 1.2rem !important;
-
-          .ct-p {
-            padding: 12px 0;
-          }
-        }
-    }
-
-    .card-right {
-      .c-r-text {
-        background: linear-gradient(#fea, #eee);
-        border-radius: 30px;
-        margin-bottom: 10px;
-      }
-    }
-  }*/
-}
 #Section4 {
   position: relative;
   z-index: 1; /* matters! */
@@ -648,7 +605,11 @@ body {
   }
 }
 .dropdown-menu {
-  background-color: rgba(201, 222, 254, 0.74);
+  background-color: rgba(169, 118, 113, 0.42);
+}
+.dropdown-item {
+  color: #fff;
+  font-weight: bold;
 }
 
 // ******************** Section 6 styles ******************
